--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,10 @@
     "angular": "~1.4.7",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "^3.3.6",
-    "jquery": "^2.2.0"
+    "jquery": "^2.2.0",
+    "angular-resource": "^1.5.0"
+  },
+  "resolutions": {
+    "angular": "~1.4.7"
   }
 }
